# gpu-rodinia-enhanced

./: .gitignore  CMakeLists.txt  README.md
common/: exception.h  helper_cuda.h  helper_string.h  helper_timer.h
cuda/: CMakeLists.txt
cuda/b+tree/: CMakeLists.txt  common.h  main.cu
cuda/b+tree/kernel/: kernel_gpu_cuda.cuh  kernel_gpu_cuda_2.cuh  kernel_gpu_cuda_wrapper.cu  kernel_gpu_cuda_wrapper.h  kernel_gpu_cuda_wrapper_2.cu  kernel_gpu_cuda_wrapper_2.h
cuda/b+tree/util/cuda/: cuda.cu
cuda/b+tree/util/timer/: timer.c
cuda/backprop/: CMakeLists.txt  backprop.c  backprop.h  backprop_cuda.cu  backprop_cuda_kernel.cuh  facetrain.c
cuda/bfs/: CMakeLists.txt  bfs.cu  kernel.cu  kernel2.cu
cuda/cfd/: CMakeLists.txt  euler3d.cu  euler3d_double.cu  pre_euler3d.cu  pre_euler3d_double.cu
cuda/dwt2d/: CMakeLists.txt  common.h  components.cu  components.h  dwt.cu  dwt.h  main.cu
cuda/dwt2d/dwt_cuda/: common.h  fdwt53.cu  fdwt97.cu  io.h  rdwt53.cu  rdwt97.cu  transform_buffer.h
cuda/gaussian/: CMakeLists.txt  gaussian.cu
cuda/heartwall/: CMakeLists.txt  kernel.cuh  main.cu  setdevice.cu
cuda/heartwall/AVI/: avilib.c  avilib.h  avimod.c  avimod.h
cuda/hotspot/: CMakeLists.txt  hotspot.cu
cuda/hotspot3D/: 3D.cu  CMakeLists.txt  opt1.cuh
cuda/huffman/: CMakeLists.txt  comparison_helpers.h  cpuencode.cpp  cpuencode.h  cuda_helpers.h  cutil.h  hist.cu  huffTree.h  load_data.h  main_test_cu.cu  pabio_kernels_v2.cu  pack_kernels.cu  print_helpers.h  scan.cu  scanLargeArray_kernel.cu  stats_logger.cpp  stats_logger.h  testdatagen.h  vlc_kernel_sm64huff.cu
cuda/hybridsort/: CMakeLists.txt  bucketsort.cu  bucketsort.cuh  bucketsort_kernel.cu  histogram1024_kernel.cu  main.cu  mergesort.cu  mergesort.cuh  mergesort_kernel.cu
cuda/kmeans/: CMakeLists.txt  cluster.c  getopt.c  getopt.h  kmeans.c  kmeans.h  kmeans_clustering.c  kmeans_cuda.cu  kmeans_cuda_kernel.cuh  rmse.c  unistd.h
cuda/lavaMD/: CMakeLists.txt  main.c  main.h
cuda/lavaMD/kernel/: kernel_gpu_cuda.cu  kernel_gpu_cuda_wrapper.cu  kernel_gpu_cuda_wrapper.h
cuda/lavaMD/util/device/: device.cu  device.h
cuda/lavaMD/util/num/: num.c
cuda/leukocyte/: CMakeLists.txt  run
cuda/leukocyte/include/: err.h  iter.h  machine.h  matlab.h  matrix.h  matrix2.h  meminfo.h  oldnames.h  sparse.h  sparse2.h  zmatrix.h  zmatrix2.h
cuda/leukocyte/src/: avilib.c  avilib.h  detect_main.c  find_ellipse.c  find_ellipse.h  find_ellipse_kernel.cu  find_ellipse_kernel.h  misc_math.c  track_ellipse.c  track_ellipse.h  track_ellipse_kernel.cu  track_ellipse_kernel.h
cuda/lud/: CMakeLists.txt
cuda/lud/base/: lud.c
cuda/lud/common/: common.c  common.h
cuda/lud/cuda/: lud.cu  lud_kernel.cu
cuda/lud/tools/: gen_input.c
cuda/mst/: CMakeLists.txt  devel.h  main.cu  run
cuda/mummergpu/src/: PoolMalloc.cpp  common.cu  mummergpu.cu  mummergpu.h  mummergpu_gold.cpp  mummergpu_kernel.cu  mummergpu_main.cpp  smith-waterman.cpp  suffix-tree.cpp
cuda/myocyte/: CMakeLists.txt  embedded_fehlberg_7_8.cuh  embedded_fehlberg_7_8_2.cuh  file.h  kernel.cuh  kernel_2.cuh  kernel_cam.cuh  kernel_cam_2.cuh  kernel_ecc.cuh  kernel_ecc_2.cuh  kernel_fin.cuh  kernel_fin_2.cuh  main.cu  master.cuh  solver.cuh  solver_2.cuh  timer.h  work.cuh  work_2.cuh
cuda/nn/: CMakeLists.txt  hurricane_gen.c  nn_cuda.cu
cuda/nw/: CMakeLists.txt  needle.cu  needle.h  needle_kernel.cuh
cuda/particlefilter/: CMakeLists.txt  ex_particle_CUDA_float_seq.cu  ex_particle_CUDA_naive_seq.cu
cuda/pathfinder/: CMakeLists.txt  pathfinder.cu
cuda/srad/: CMakeLists.txt
cuda/srad/srad_v1/: compress_kernel.cuh  define.h  device.h  extract_kernel.cuh  graphics.h  include.h  main.cu  prepare_kernel.cuh  reduce_kernel.cuh  resize.h  srad2_kernel.cuh  srad_kernel.cuh
cuda/srad/srad_v2/: srad.cu  srad_kernel.cuh
cuda/streamcluster/: CMakeLists.txt  streamcluster_cuda.cu  streamcluster_cuda_cpu.cpp  streamcluster_header.cuh  streamcluster_original.cpp
cuda/util/: timing.h
opencl/: CMakeLists.txt
opencl/backprop/: CMakeLists.txt  backprop.cpp  backprop.h  backprop_ocl.cpp  facetrain.cpp  imagenet.cpp
openmp/: CMakeLists.txt
openmp/b+tree/: CMakeLists.txt
openmp/backprop/: CMakeLists.txt
openmp/bfs/: CMakeLists.txt
openmp/cfd/: CMakeLists.txt
openmp/heartwall/: CMakeLists.txt  main.c
openmp/hotspot/: CMakeLists.txt
openmp/hotspot3D/: CMakeLists.txt
openmp/kmeans/: CMakeLists.txt
openmp/lavaMD/: CMakeLists.txt
openmp/leukocyte/: CMakeLists.txt
openmp/leukocyte/meschach_lib/: CMakeLists.txt
openmp/lud/: CMakeLists.txt
(+15 files in other folders)
