set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/cuda)

if(SHARED_CUDART)
    set(CMAKE_CUDA_RUNTIME_LIBRARY "Shared")
endif()

add_subdirectory(b+tree)
add_subdirectory(backprop)
add_subdirectory(bfs)
add_subdirectory(cfd)
add_subdirectory(dwt2d)
add_subdirectory(gaussian)
add_subdirectory(heartwall)
add_subdirectory(hotspot)
add_subdirectory(hotspot3D)
add_subdirectory(huffman)
#add_subdirectory(hybridsort)
#add_subdirectory(kmeans)
add_subdirectory(lavaMD)
#add_subdirectory(leukocyte)
add_subdirectory(lud)
#add_subdirectory(mummergpu)
add_subdirectory(myocyte)
add_subdirectory(nn)
add_subdirectory(nw)
add_subdirectory(particlefilter)
add_subdirectory(pathfinder)
add_subdirectory(srad)
add_subdirectory(streamcluster)
