

add_library(omp_meschach_lib STATIC
    arnoldi.c
    bdfactor.c
    bkpfacto.c
    chfactor.c
    conjgrad.c
    copy.c
    dmacheps.c
    err.c
    extras.c
    fft.c
    fmacheps.c
    givens.c
    hessen.c
    hsehldr.c
    init.c
    iotort.c
    iter0.c
    iternsym.c
    itersym.c
    itertort.c
    ivecop.c
    lanczos.c
    lufactor.c
    machine.c
    matlab.c
    matop.c
    matrixio.c
    maxint.c
    meminfo.c
    memory.c
    memstat.c
    memtort.c
    mfunc.c
    mfuntort.c
    norm.c
    otherio.c
    pxop.c
    qrfactor.c
    schur.c
    solve.c
    sparse.c
    sparseio.c
    spbkp.c
    spchfctr.c
    splufctr.c
    sprow.c
    spswap.c
    sptort.c
    submat.c
    svd.c
    symmeig.c
    torture.c
    tutadv.c
    tutorial.c
    update.c
    vecop.c
    version.c
    zcopy.c
    zfunc.c
    zgivens.c
    zhessen.c
    zhsehldr.c
    zlufctr.c
    zmachine.c
    zmatio.c
    zmatlab.c
    zmatop.c
    zmemory.c
    znorm.c
    zqrfctr.c
    zschur.c
    zsolve.c
    ztorture.c
    zvecop.c
)
